# x402

./: .gitignore  Dockerfile  Dockerfile.agi-tiny  Dockerfile.alpine  Dockerfile.python-bridge  Makefile  Makefile_rio35  README.md  README_ARKHE_OCTRA.md  agi.md  ao.md  arkhe-chat  arkhe-llm.service  arkhe_agent.py  arkhe_android_os.py  arkhe_chat.py  arkhe_jest_suite.py  arkhe_llama_client.py  arkhe_llama_curl_examples.sh  arkhe_llama_server.sh  arkhe_omni_agent.py  artifacts.json  asic_tapeout.py  asymptotic_analysis.py  axiarchy_lattice.lean  calibration_report_template.json  catedral_arkhe.json  cognitive_operators.py  convert_to_gguf.py  create_workspace.py  dashboard-b20.yml  discovery_adapters.py  dkes_constraints.xdc  dkes_mkel.py  dkes_ntt_bridge.py  dkes_rtl.v  docker-compose.alpine.yml  docker-compose.prod.yml  docker-compose.yml  enterprise_mind.py  (+78 more)
arkhe/: Cargo.toml
arkhe/contracts/drex/: RoyaltySplitter.sol
arkhe/src/: lib.rs
arkhe/src/cli/: desci_commands.rs  mod.rs
arkhe/src/evolution/: desci_node_resource.rs  mod.rs
arkhe/src/hashtree/: adapter.rs
arkhe/src/integrations/: bridge.rs  mod.rs  nostr.rs  pearpass.rs  picnic.rs  pix.rs  pix_openapi.rs  qvac.rs  tensorzkp.rs  x402.rs
arkhe/src/swarm/: orchestrator.rs
arkhe/src/webhooks/: mod.rs  pix_handler.rs
arkhe/tests/: unit_tests.rs
arkhe_jax_substrate_260/: Cargo.toml  DECRETO_260.md  DECRETO_260_2.md
arkhe_jax_substrate_260/arkhe_jax_core/: Cargo.toml
arkhe_jax_substrate_260/arkhe_jax_core/src/: autograd.rs  dtype.rs  jaxpr.rs  lib.rs  linalg.rs  prng.rs
arkhe_jax_substrate_260/arkhe_jax_macros/: Cargo.toml
arkhe_jax_substrate_260/arkhe_jax_macros/src/: lib.rs
arkhe_jax_substrate_260/arkhe_jax_xla/: Cargo.toml
arkhe_jax_substrate_260/arkhe_jax_xla/src/: fhe_bridge.rs  jit.rs  lib.rs  mesh.rs
arkhe_jax_substrate_260/arkhe_jax_zk/: Cargo.toml
arkhe_jax_substrate_260/arkhe_jax_zk/src/: lib.rs  prover.rs  verifier.rs
arkhe_jax_substrate_260/benches/: matmul_bench.rs
arkhe_jax_substrate_260/proto/: octra.proto
arkhe_proxy/: Cargo.toml
arkhe_proxy/src/: attestation.rs  main.rs  proxy.rs  server.rs
benches/: Cargo.toml
benches/benches/: pqc_benchmarks.rs
catedral-coreutils/: Cargo.toml  build_catedral_coreutils.sh  catedral_fs.c
catedral-coreutils/src/: catedral_fuse_1028.3.rs  coreutils_catedral_rust_1028.1.rs
cathedral-arkhe/: Cargo.toml  fix_final.sh  fix_prost.sh  fix_prost_build.sh  fix_sail2.sh  fix_sail_cargo.py  fix_test_src.py  fix_verdict.py  update_protos.sh  update_protos2.sh
cathedral-arkhe-v28.3/orchestrator/: Cargo.toml
cathedral-arkhe-v28.3/orchestrator/contracts/: AGIIdentity.json  AGIIdentity.sol
cathedral-arkhe-v28.3/orchestrator/src/: lib.rs  multi_agent.rs
cathedral-arkhe-v28.3/orchestrator/tests/: b20_integration_tests.rs
cathedral-arkhe/bridge/: Cargo.toml  build.rs
cathedral-arkhe/bridge/src/: ethical_filter.rs  governance_hook.rs  grpc_service.rs  health.rs  main.rs  metrics.rs  tree_validator.rs  wormgraph_client.rs
cathedral-arkhe/cathedral-atlassian/: Cargo.toml
cathedral-arkhe/cathedral-atlassian/src/: jira_client.rs  lib.rs  rovo_adapter.rs
cathedral-arkhe/cem-adapter/: Cargo.toml
cathedral-arkhe/cem-adapter/src/: lib.rs
cathedral-arkhe/nostr-replicator/: Cargo.toml
cathedral-arkhe/nostr-replicator/src/: replicator.rs
cathedral-arkhe/observer-5d/: Cargo.toml  build.rs
cathedral-arkhe/observer-5d/src/: council_grpc.rs  lib.rs
cathedral-arkhe/prometheus-agent/: Cargo.toml
cathedral-arkhe/prometheus-agent/src/: main.rs
cathedral-arkhe/sail-zk-pipeline/: Cargo.toml
cathedral-arkhe/sail-zk-pipeline/src/: lib.rs
cathedral-arkhe/sdk-rs/: Cargo.toml  build.rs
cathedral-arkhe/sdk-rs/src/: agent_tree.rs  grpc_client.rs  lib.rs
cathedral-arkhe/shard-controller/: Cargo.toml
cathedral-arkhe/shard-controller/src/: failover.rs  lib.rs
cathedral-arkhe/test-utils/: Cargo.toml
cathedral-arkhe/test-utils/src/: granular_partition.rs  lib.rs  mock_council.rs
cathedral-arkhe/tests/: Cargo.toml  integration_test.rs  performance_test.rs  property_test.rs  resilience_test.rs  stress_test.rs
cathedral-arkhe/wormgraph/: Cargo.toml  expanded.rs
cathedral-arkhe/wormgraph/src/: client.rs  consistent_hasher.rs  lib.rs  replication.rs  reputation.rs  shard.rs  shard_manager.rs  storage.rs  storage_file.rs  test_utils.rs
cathedral-arkhe/zk-circuits/: Cargo.toml
cathedral-arkhe/zk-circuits/src/: lib.rs  reputation_circuit.rs
cathedral-arkhe/zk-risc0/: Cargo.toml
cathedral-arkhe/zk-risc0/src/: lib.rs
cathedral-code/: .gitignore  Cargo.toml  README.md
cathedral-code/crates/cathedral-cli/: Cargo.toml
cathedral-code/crates/cathedral-core/: Cargo.toml
cathedral-code/crates/cathedral-harness/: Cargo.toml
cathedral-code/crates/cathedral-identity/: Cargo.toml
cathedral-code/crates/cathedral-opencode-bridge/: Cargo.toml
cathedral-code/crates/cathedral-orchestration/: Cargo.toml
cathedral-code/crates/cathedral-permissions/: Cargo.toml
cathedral-code/crates/cathedral-remix-bridge/: Cargo.toml
cathedral-code/crates/cathedral-self-improve/: Cargo.toml
cathedral-code/crates/cathedral-server/: Cargo.toml
cathedral-code/crates/cathedral-tools/: Cargo.toml
cathedral-code/crates/cathedral-wormgraph/: Cargo.toml
cathedral-code/crates/cathedral-zk/: Cargo.toml
cathedral-code/remix-runtime/: package-lock.json  package.json
cathedral-cse/: Cargo.toml
cathedral-cse/src/: lib.rs  main.rs
cathedral-cse/src/agent/: mod.rs  (+1 more)
cathedral-dcops/: Cargo.toml
cathedral-dcops/benches/: persistence_bench.rs
cathedral-dcops/migrations/: 20260622000000_initial.sql  20260622000001_down.sql
cathedral-llm/: Cargo.toml  Makefile
cathedral-orchestrator/: Cargo.toml
cathedral-orchestrator/src/: cem.rs  identity.rs  lib.rs  observer_5d.rs  orchestrator.rs  task_router.rs
cathedral/bridge/: Cargo.toml  build.rs
cathedral/sdk-rs/: Cargo.toml  build.rs
substrato-7001/: Cargo.toml  Dockerfile
substrato-7001/src/: main.rs  mcp_polar_stdio.rs  metrics_exporter.rs
substrato-7001/tests/: polar_integration.rs
(+431 files in other folders)
