[workspace]
members = [
    "arkhe_jax_core",
    "arkhe_jax_xla",
    "arkhe_jax_zk",
    "arkhe_jax_macros",
]
resolver = "2"

[workspace.package]
version = "0.2.0-arkhe"
edition = "2021"
authors = ["ARKHE-OS Architect <orcid:0009-0005-2697-4668>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/arkhe-os/arkhe_jax"
keywords = ["autograd", "jit", "wgpu", "fhe", "zk"]
categories = ["science", "cryptography", "concurrency"]
rust-version = "1.78"

[workspace.dependencies]
bumpalo = { version = "3.16", features = ["collections"] }
wgpu = "0.20"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }
sha3 = "0.10"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
flatbuffers = "23.5"
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
futures = "0.3"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
tonic = "0.11"
prost = "0.12"
matrixmultiply = "0.3"
thiserror = "1.0"
tracing = "0.1"
