[package]
name = "catedral-coreutils"
version = "1028.1.0"
edition = "2021"
authors = ["ARKHE Architect <orcid:0009-0005-2697-4668>"]
description = "Coreutils da Catedral ARKHE — Rust rewrite"
license = "AGPL-3.0"
repository = "https://github.com/arkhe/catedral-coreutils"

[dependencies]
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
libc = "0.2"

# Dependências para FUSE (substrato 1028.3)
[dependencies.fuser]
version = "0.14"
optional = true

[features]
default = ["rust-utils"]
rust-utils = []
kernel-module = []
fuse-fs = ["fuser"]
full = ["rust-utils", "fuse-fs"]

[[bin]]
name = "catedral-coreutils"
path = "src/coreutils_catedral_rust_1028.1.rs"
required-features = ["rust-utils"]

[[bin]]
name = "catedral-fuse"
path = "src/catedral_fuse_1028.3.rs"
required-features = ["fuse-fs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
