[workspace]
resolver = "2"
members = [
    "bridge",
    "sdk-rs",
    "prometheus-agent",
    "zk-risc0",
    "nostr-replicator",
    "wormgraph",
    "observer-5d",
    "cem-adapter",
    "cathedral-atlassian",
    "shard-controller",
    "sail-zk-pipeline",
    "zk-circuits",
    "test-utils",
    "tests",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Cathedral ARKHE Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/arkhe/cathedral-arkhe"
[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "pkcs8"] }
prost = "0.13"
prost-types = "0.13"

rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
tonic = "0.12"
tonic-build = "0.12"
tonic-reflection = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
zstd = "0.13"
bincode = "1.3"
risc0-zkvm = "1.2"
nostr-sdk = "0.36"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
[workspace.features]
production = ["cathedral-sdk/production", "cem-adapter/production", "observer-5d/production"]
