[workspace]
members = [
    "crates/*"
]

[workspace.dependencies]
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "postgres", "migrate"] }
sqlx-macros = "0.9"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
dashmap = "6.1"
