[package]
name = "cathedral-orchestrator"
version = "28.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
tracing = "0.1"
uuid = { version = "1.16", features = ["v4"] }

# Stubs for local ecosystem dependencies based on architecture
# cathedral-sdk = { path = "../sdk-rs" }
# cathedral-atlassian = { path = "../cathedral-atlassian" }
# cathedral-sail = { path = "../cathedral-sail" }
# arkhe-wormgraph = { path = "../wormgraph" }
