[package]
name = "arkhe_jax_zk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
arkhe_jax_core = { path = "../arkhe_jax_core" }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
