[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
arcode = "0.2"
async-trait = "0.1.74"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
prometheus = "0.13.3"
