[package]
name = "arkhe-bridge"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cathedral-bridge"
path = "src/main.rs"
[dependencies]
arkhe-sdk = { path = "../sdk-rs", package = "cathedral-sdk" }
arkhe-wormgraph = { path = "../wormgraph" }
arkhe-nostr = { path = "../nostr-replicator" }
arkhe-zk-risc0 = { path = "../zk-risc0", optional = true }
anyhow.workspace = true
async-trait.workspace = true
blake3.workspace = true
chrono.workspace = true
clap.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
axum = "0.7"
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
cathedral-atlassian = { path = "../cathedral-atlassian" }
[build-dependencies]
tonic-build.workspace = true
