[package]
name = "cem-adapter"
version.workspace = true
edition.workspace = true

[features]
production = ["cathedral-atlassian"]
[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
prost.workspace = true
prost-types.workspace = true
cathedral-atlassian = { path = "../cathedral-atlassian", optional = true }
arkhe-wormgraph = { path = "../wormgraph" }
observer-5d = { path = "../observer-5d" }
