[package]
name = "observer-5d"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
async-trait.workspace = true
arkhe-wormgraph = { path = "../wormgraph" }
arkhe-bridge = { path = "../bridge" }
[features]
production = []
[build-dependencies]
tonic-build.workspace = true
