[package]
name = "prometheus-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "prometheus-agent"
path = "src/main.rs"

[dependencies]
cathedral-sdk = { path = "../sdk-rs" }
anyhow.workspace = true
clap.workspace = true
rand.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
