[package]
name = "sail-zk-pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
arkhe-zk-circuits = { path = "../zk-circuits" }
arkhe-zk-risc0 = { path = "../zk-risc0", package = "arkhe-zk-risc0" }
async-channel = "2.5.0"

[features]
production = []
