[package]
name = "cathedral-sdk"
version.workspace = true
edition.workspace = true

[features]
production = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true
zstd.workspace = true

[build-dependencies]
tonic-build.workspace = true
