[package]
name = "arkhe-wormgraph"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
blake3.workspace = true
chrono.workspace = true
async-trait.workspace = true
arkhe-zk-circuits = { path = "../zk-circuits" }
