[package]
name = "cathedral-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
blake3 = "1"
tracing = "0.1"
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
prost = "0.13"
tonic = "0.12"
prost-types = "0.13"


tonic-build = "0.12"
