[package]
name = "cathedral-opencode-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
