[package]
name = "cathedral-server"
version = "0.1.0"
edition = "2021"

[dependencies]
cathedral-core = { path = "../cathedral-core" }
cathedral-identity = { path = "../cathedral-identity" }
cathedral-wormgraph = { path = "../cathedral-wormgraph" }
cathedral-zk = { path = "../cathedral-zk" }
cathedral-remix-bridge = { path = "../cathedral-remix-bridge" }
cathedral-opencode-bridge = { path = "../cathedral-opencode-bridge" }
cathedral-permissions = { path = "../cathedral-permissions" }
cathedral-tools = { path = "../cathedral-tools" }
cathedral-orchestration = { path = "../cathedral-orchestration" }

axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
