[package]
name = "cathedral-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
cathedral-identity = { path = "../cathedral-identity" }
cathedral-wormgraph = { path = "../cathedral-wormgraph" }
cathedral-permissions = { path = "../cathedral-permissions" }
